fixed allaccounts spacing issues

--- a/com/DansFrappes/src/DjangoServer/account/static/account/style.css
+++ b/com/DansFrappes/src/DjangoServer/account/static/account/style.css
@@ -204,3 +204,15 @@ width: 40px;
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+
+.div-table{
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+
+th{
+  width: 33%;
+}
+
+
